Fixing footer position on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -625,6 +625,20 @@ text-area,.yui-navset li
     margin:1.5em auto 0;
   }
   
+  #footer {
+    width: auto;
+      bottom: 1rem;
+  }
+    
+    #license-area {
+        font-size: 0.6em;  
+        bottom: -1.5em;
+        width: 90%;
+        margin: 0 auto;
+        line-height: 1;
+        height: 2rem;
+    }
+  
   #search-top-box-input,#search-top-box,#navi-bar,#navi-bar-shadow
   {
     display:none;
